--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # no need for it
 test.lua
 old/
-get-ingredience.lua
-staic-tables-lua
+prototype/science-randomizer/prep/get-ingredience.lua
+prototype/science-randomizer/prep/static-tables-lua
