--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 test.lua
 old/
 prototype/science-randomizer/prep/get-ingredience.lua
-prototype/science-randomizer/prep/static-tables-lua
+prototype/science-randomizer/prep/static-tables.lua
