added localisation for mod settings

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -1,5 +1,20 @@
 [mod-setting-name]
 Redart-Science-Randomizer-random-seed=Random Seed
+Redart-Science-Randomizer-allow-grown=Natural grown ressources
+Redart-Science-Randomizer-allow-fluid=Fluids
+Redart-Science-Randomizer-allow-science=Sciences packs
+Redart-Science-Randomizer-allow-raw=Raw ressources
+Redart-Science-Randomizer-in-tier=Tiered items
+Redart-Science-Randomizer-balanced=Balance gameplay
+Redart-Science-Randomizer-set-packs=Set recipe string
+
 
 [mod-setting-description]
 Redart-Science-Randomizer-random-seed=Seed used to generate recipes.
+Redart-Science-Randomizer-allow-grown=Allows wood and fish to be used in science recipes.
+Redart-Science-Randomizer-allow-fluid=Allows fluids to be used in science recipes.
+Redart-Science-Randomizer-allow-science=Allows science packs to be used in science recipes.
+Redart-Science-Randomizer-allow-raw=Allows raw ressources to be used in science recipes.
+Redart-Science-Randomizer-in-tier=The science pack recipe uses only items unlocked by the previous science pack. Setting it to 'false' allows all previous tiers to be used for the recipes.
+Redart-Science-Randomizer-balanced=Adjust science pack quantities based on recipe cost. Setting this to 'false' ignores the item cost and returns vanilla quantities for science pack recipes. This might slow game progression down.
+Redart-Science-Randomizer-set-packs=Set the recipes for packs using the in-game GUI string to lock it in, preventing mods alteration from altering recipes.
