added a button to export/imprt new data and as such freze recipes

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -18,3 +18,6 @@ Redart-Science-Randomizer-allow-raw=Allows raw ressources to be used in science 
 Redart-Science-Randomizer-in-tier=The science pack recipe uses only items unlocked by the previous science pack. Setting it to 'false' allows all previous tiers to be used for the recipes.
 Redart-Science-Randomizer-balanced=Adjust science pack quantities based on recipe cost. Setting this to 'false' ignores the item cost and returns vanilla quantities for science pack recipes. This might slow game progression down.
 Redart-Science-Randomizer-set-packs=Set the recipes for packs using the in-game GUI string to lock it in, preventing mods alteration from altering recipes.
+
+[randomizer]
+export=Science recipe export
