added localisation and captured the log data

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -19,5 +19,7 @@ Redart-Science-Randomizer-in-tier=The science pack recipe uses only items unlock
 Redart-Science-Randomizer-balanced=Adjust science pack quantities based on recipe cost. Setting this to 'false' ignores the item cost and returns vanilla quantities for science pack recipes. This might slow game progression down.
 Redart-Science-Randomizer-set-packs=Set the recipes for packs using the in-game GUI string to lock it in, preventing mods alteration from altering recipes.
 
-[randomizer]
+[science_randomizer]
 export=Science recipe export
+selectAll=Select all
+confirm=Ok
